# DOOM-3-BFG

./: .gitignore
neo/: CMakeLists.txt  premake5.lua  vcpkg.json
neo/.premake/: modules.lua
neo/.premake/vscode/: vscode_project.lua  vscode_tasks.lua  vscode_workspace.lua
neo/aas/: AASFile.cpp  AASFileManager.cpp  AASFile_optimize.cpp  AASFile_sample.cpp
neo/amplitude/: amplitude.cpp  amplitude.lua
neo/cm/: CollisionModel_contacts.cpp  CollisionModel_contents.cpp  CollisionModel_debug.cpp  CollisionModel_files.cpp  CollisionModel_load.cpp  CollisionModel_local.h  CollisionModel_rotate.cpp  CollisionModel_trace.cpp  CollisionModel_translate.cpp
neo/d3xp/: AF.cpp  AFEntity.cpp  Achievements.cpp  Achievements.h  Actor.cpp  AimAssist.cpp  BrittleFracture.cpp  CMakeLists.txt  Camera.cpp  Camera.h  Entity.cpp  Fx.cpp  Game.cmake  Game.h  GameEdit.cpp  GameEdit.h  Game_local.cpp  Game_local.h  Game_network.cpp  Grabber.cpp  Grabber.h  IK.cpp  Item.cpp  Leaderboards.cpp  Leaderboards.h  Light.cpp  Misc.cpp  Misc.h  Moveable.cpp  Mover.cpp  MultiplayerGame.cpp  Player.cpp  Player.h  PlayerIcon.cpp  PlayerView.cpp  PlayerView.h  Projectile.cpp  Pvs.cpp  SecurityCamera.cpp  SmokeParticles.cpp  (+8 more)
neo/d3xp/ai/: AAS.cpp  AAS_debug.cpp  AAS_pathing.cpp  AAS_routing.cpp  AI.cpp  AI_Vagary.cpp  AI_events.cpp  AI_pathing.cpp
neo/d3xp/anim/: Anim.cpp  Anim.h  Anim_Blend.cpp  Anim_Testmodel.cpp
neo/d3xp/gamesys/: Class.cpp  Event.cpp  NoGameTypeInfo.h  SaveGame.cpp  SysCmds.cpp  SysCvar.cpp
neo/d3xp/menus/: MenuHandler.cpp  MenuHandler.h  MenuHandler_HUD.cpp  MenuHandler_PDA.cpp  MenuHandler_Scoreboard.cpp  MenuHandler_Shell.cpp  MenuScreen.cpp  MenuScreen.h  MenuScreen_HUD.cpp  MenuScreen_PDA_Inventory.cpp  MenuScreen_PDA_UserData.cpp  MenuScreen_PDA_UserEmails.cpp  MenuScreen_PDA_VideoDisks.cpp  MenuScreen_Scoreboard.cpp  MenuScreen_Shell_Bindings.cpp  MenuScreen_Shell_Browser.cpp  MenuScreen_Shell_ControllerLayout.cpp  MenuScreen_Shell_Controls.cpp  MenuScreen_Shell_Credits.cpp  MenuScreen_Shell_Dev.cpp  MenuScreen_Shell_Difficulty.cpp  MenuScreen_Shell_GameLobby.cpp  MenuScreen_Shell_GameOptions.cpp  MenuScreen_Shell_Gamepad.cpp  MenuScreen_Shell_Leaderboards.cpp  MenuScreen_Shell_Load.cpp  MenuScreen_Shell_MatchSettings.cpp  MenuScreen_Shell_ModeSelect.cpp  MenuScreen_Shell_NewGame.cpp  MenuScreen_Shell_PartyLobby.cpp  MenuScreen_Shell_Pause.cpp  MenuScreen_Shell_Playstation.cpp  MenuScreen_Shell_PressStart.cpp  MenuScreen_Shell_Resolution.cpp  MenuScreen_Shell_Root.cpp  MenuScreen_Shell_Save.cpp  MenuScreen_Shell_Settings.cpp  (+23 more)
neo/framework/: BuildVersion.h  CVarSystem.cpp  CVarSystem.h  CmdSystem.cpp  Common.cpp  Common.h  Common_demos.cpp  Common_dialog.cpp  Common_dialog.h  Common_load.cpp  Common_local.h  Common_localize.cpp  Common_menu.cpp  Common_network.cpp  Common_printf.cpp  Common_tools.cpp  Compressor.cpp  Compressor.h  Console.cpp  Console.h  ConsoleHistory.cpp  DebugGraph.cpp  DeclAF.cpp  DeclEntityDef.cpp  DeclFX.cpp  DeclManager.cpp  DeclManager.h  DeclPDA.cpp  DeclParticle.cpp  DeclParticle.h  DeclSkin.cpp  DeclTable.cpp  DemoFile.cpp  EditField.cpp  EventLoop.cpp  File.cpp  File.h  FileSystem.cpp  FileSystem.h  File_Manifest.cpp  (+19 more)
neo/idlib/: BitMsg.cpp  CMakeLists.txt  CommandLink.cpp  Debug.cpp  Debug.h  Dict.cpp  Heap.cpp  LangDict.cpp  LangDict.h  Lexer.cpp  Lexer.h  Lib.cpp  Lib.h  ParallelJobList.cpp  ParallelJobList.h  ParallelJobList_JobHeaders.h  Parser.cpp  RectAllocator.cpp  Str.cpp  Str.h  Thread.cpp  idlib.lua  precompiled.h
neo/renderer/: AutoRender.cpp  AutoRenderBink.cpp  BinaryImage.cpp  BoundsTrack.cpp  BufferObject.cpp  Cinematic.cpp  Cinematic.h  CinematicBink.cpp  CinematicBink.h  CinematicRoQ.cpp  Font.cpp  Font.h  Font_Local.cpp  Font_Local.h  GLMatrix.cpp  GuiModel.cpp  GuiModel.h  Image.h  ImageManager.cpp  Image_files.cpp  Image_intrinsic.cpp  Image_load.cpp  Image_process.cpp  Image_program.cpp  Interaction.cpp  Material.cpp  Material.h  Model.cpp  Model.h  ModelDecal.cpp  ModelDecal.h  ModelManager.cpp  ModelOverlay.cpp  ModelOverlay.h  Model_ase.cpp  Model_beam.cpp  Model_liquid.cpp  Model_lwo.cpp  Model_ma.cpp  Model_md3.cpp  (+34 more)
neo/sound/: SoundHardware.h  SoundVoice.cpp  SoundVoiceBase.h  WaveFile.cpp  snd_emitter.cpp  snd_local.h  snd_shader.cpp  snd_system.cpp  snd_world.cpp  sound.h
neo/swf/: SWF.h  SWF_Bitstream.cpp  SWF_Dialogs.cpp  SWF_Dialogs.h  SWF_Dictionary.cpp  SWF_Events.cpp  SWF_Image.cpp  SWF_Inflate.cpp  SWF_Load.cpp  SWF_Main.cpp  SWF_Names.cpp  SWF_ParmList.cpp  SWF_PlaceObject.cpp  SWF_Render.cpp  SWF_ScriptFunction.cpp  SWF_ScriptObject.cpp  SWF_ScriptVar.cpp  SWF_ShapeParser.cpp  SWF_Shapes.cpp  SWF_Sounds.cpp  SWF_SpriteInstance.cpp  SWF_SpriteInstance.h  SWF_Sprites.cpp  SWF_Text.cpp  SWF_TextInstance.cpp  SWF_Types.h  SWF_Zlib.cpp
neo/sys/: CMakeLists.txt  LightweightCompression.cpp  PacketProcessor.cpp  Snapshot.cpp  Snapshot.h  SnapshotProcessor.cpp  Snapshot_Jobs.cpp  sys_achievements.cpp  sys_dedicated_server_search.cpp  sys_leaderboards.h  sys_lobby.cpp  sys_lobby.h  sys_lobby_backend.h  sys_lobby_backend_direct.cpp  sys_lobby_backend_direct.h  sys_lobby_migrate.cpp  sys_lobby_snapshot.cpp  sys_lobby_users.cpp  sys_local.cpp  sys_local.h  sys_localuser.cpp  sys_localuser.h  sys_platform_local.cpp  sys_platform_local.h  sys_platform_public.h  sys_profile.cpp  sys_profile.h  sys_public.h  sys_savegame.cpp  sys_savegame.h  sys_session.h  sys_session_callbacks.cpp  sys_session_local.cpp  sys_session_local.h  sys_session_savegames.cpp  sys_signin.cpp  sys_voicechat.cpp  sys_voicechat.h
neo/ui/: BindWindow.cpp  ChoiceWindow.cpp  DeviceContext.cpp  DeviceContext.h  DeviceContextLegacy.cpp  DeviceContextOptinized.cpp  EditWindow.cpp  FieldWindow.cpp  GameBearShootWindow.cpp  GameBearShootWindow.h  GameBustOutWindow.cpp  GameBustOutWindow.h  GameSSDWindow.cpp  GameWindow.cpp  GameWindow.h  GuiScript.cpp  ListGUI.cpp  ListWindow.cpp  RegExp.cpp  RegExp.h  RenderWindow.cpp  SimpleWindow.cpp  SimpleWindow.h  SliderWindow.cpp  UserInterface.cpp  UserInterfaceLocal.h  Window.cpp  Window.h  Winvar.cpp  Winvar.h
(+178 files in other folders)
